--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,17 +1,9 @@
-<%= form_for(@image) do |f| %>
-  <% if @image.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@image.errors.count, "error") %> prohibited this image from being saved:</h2>
+<%= semantic_form_for @image do |f| %>
 
-      <ul>
-      <% @image.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <%= f.inputs %>
+<% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= f.actions do %>
+    <%= f.action :submit, :as => :button %>
+    <%= f.action :cancel, :as => :link %>
 <% end %>
