--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,4 +1,18 @@
 <p id="notice"><%= notice %></p>
+<p>
+  <b>Name:</b>
+  <%= @image.name %>
+</p>
+
+<p>
+  <b>Category:</b>
+  <%= @image.category %>
+</p>
+
+<p>
+  <b>Path:</b>
+  <%= @image.pathway %>
+</p>
 
 
 <%= link_to 'Edit', edit_image_path(@image) %> |
