--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -1,5 +1,13 @@
 <h1>Editing image</h1>
 
+<%= semantic_form_for @image do |f| %>
+<tr>
+  <td><%= f.name %></td>
+  <td><%= f.category %></td>
+  <td><%= f.pathway %></td>
+</tr>
+
+ <% end %>
 <%= render 'form' %>
 
 <%= link_to 'Show', @image %> |
