--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,14 +1,10 @@
 <h1>Listing images</h1>
 
-<table>
-  <tr>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
 <% @images.each do |image| %>
   <tr>
+    <td><%= image.name %></td>
+    <td><%= image.category %></td>
+    <td><%= image.pathway %></td>
     <td><%= link_to 'Show', image %></td>
     <td><%= link_to 'Edit', edit_image_path(image) %></td>
     <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
