paperclip installed and file uplaod possible
the system now requires imagemagick to upload files. the install for
windows is tricky, need rmagick.

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -24,6 +24,9 @@
     <div class="field">
       <%= f.input :pathway %>
     </div>
+    <div class="field">
+      <%= f.file_field :uploaded %>
+    </div>
     <div class="actions">
       <%= f.submit %>
     </div>
