--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -14,6 +14,10 @@
   <%= @image.pathway %>
 </p>
 
+<p>
+  <b>Image:</b>
+  <%=image_tag @image.uploaded.url %>
+</p>
 
 <%= link_to 'Edit', edit_image_path(@image) %> |
 <%= link_to 'Back', images_path %>
