adjusted format on upload page
create tables, removed visible path

--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -27,6 +27,9 @@
     <div class="field">
       <%= f.file_field :uploaded %>
     </div>
+    <div class="field">
+      <%= image_tag @image.uploaded.url %>
+    </div>
     <div class="actions">
       <%= f.submit %>
     </div>
