--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,34 +1,62 @@
-<%= semantic_form_for(@image) do |f| %>
+<%= form_for @image, :html => { :class => 'form-horizontal' } do |f| %>
+  <div class="control-group">
+    <%= f.label :name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :name, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :z_index, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :z_index, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :category, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :category, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :user_id, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :user_id, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :pathway, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :pathway, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :uploaded_file_name, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :uploaded_file_name, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :uploaded_content_type, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.text_field :uploaded_content_type, :class => 'text_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :uploaded_file_size, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.number_field :uploaded_file_size, :class => 'number_field' %>
+    </div>
+  </div>
+  <div class="control-group">
+    <%= f.label :uploaded_updated_at, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.datetime_select :uploaded_updated_at, :class => 'datetime_select' %>
+    </div>
+  </div>
 
-    <% if @image.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@image.errors.count, "error") %> prohibited this image from being saved:</h2>
-
-          <ul>
-            <% @image.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-
-    <div class="field">
-      <%= f.input :name, :label => "Name:" %>
-    </div>
-    <div class="field">
-      <%= f.input :category %>
-    </div>
-    <div class="field">
-      <%= f.input :z_index %>
-    </div>
-    <div class="field">
-      <%= f.file_field :uploaded %>
-    </div>
-    <div class="field">
-      <%= image_tag @image.uploaded.url %>
-    </div>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-
+  <div class="form-actions">
+    <%= f.submit nil, :class => 'btn btn-primary' %>
+    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                images_path, :class => 'btn' %>
+  </div>
 <% end %>
