--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,37 +1,52 @@
-<h1>Listing images</h1>
-
-<% @images.each do |image| %>
-    <table border="1">
+<%- model_class = Image -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
+</div>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th><%= model_class.human_attribute_name(:id) %></th>
+      <th><%= model_class.human_attribute_name(:name) %></th>
+      <th><%= model_class.human_attribute_name(:z_index) %></th>
+      <th><%= model_class.human_attribute_name(:category) %></th>
+      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      <th><%= model_class.human_attribute_name(:pathway) %></th>
+      <th><%= model_class.human_attribute_name(:uploaded_file_name) %></th>
+      <th><%= model_class.human_attribute_name(:uploaded_content_type) %></th>
+      <th><%= model_class.human_attribute_name(:uploaded_file_size) %></th>
+      <th><%= model_class.human_attribute_name(:uploaded_updated_at) %></th>
+      <th><%= model_class.human_attribute_name(:created_at) %></th>
+      <th><%=t '.actions', :default => t("helpers.actions") %></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @images.each do |image| %>
       <tr>
-        <div class="field">
-          <td>
-            <b>Name:</b>
-            <%= image.name %>
-          </td>
-      </tr>
-      <tr>
-      <td>
-        <b>Category:</b>
-        <%= image.category %>
-      </td>
-      </div>
-      </tr >
-      <tr>
+        <td><%= link_to image.id, image_path(image) %></td>
+        <td><%= image.name %></td>
+        <td><%= image.z_index %></td>
+        <td><%= image.category %></td>
+        <td><%= image.user_id %></td>
+        <td><%= image.pathway %></td>
+        <td><%= image.uploaded_file_name %></td>
+        <td><%= image.uploaded_content_type %></td>
+        <td><%= image.uploaded_file_size %></td>
+        <td><%= image.uploaded_updated_at %></td>
+        <td><%=l image.created_at %></td>
         <td>
-          <div>
-            <%= image_tag image.uploaded %>
-          </div>
+          <%= link_to t('.edit', :default => t("helpers.links.edit")),
+                      edit_image_path(image), :class => 'btn btn-mini' %>
+          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      image_path(image),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
-    </table>
+    <% end %>
+  </tbody>
+</table>
 
-        <div class="field">
-          <%= link_to 'Show', image %>
-          <%= link_to 'Edit', edit_image_path(image) %>
-          <%= link_to 'Destroy', image, method: :delete, data: {confirm: 'Are you sure?'} %>
-        </div>
-    <br/>
-<% end %>
-<br/>
-
-<%= link_to 'New image', new_image_path %>
+<%= link_to t('.new', :default => t("helpers.links.new")),
+            new_image_path,
+            :class => 'btn btn-primary' %>
