--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -1,23 +1,37 @@
-<p id="notice"><%= notice %></p>
-<p>
-  <b>Name:</b>
-  <%= @image.name %>
-</p>
+<%- model_class = Image -%>
+<div class="page-header">
+  <h1><%=t '.title', :default => model_class.model_name.human %></h1>
+</div>
 
-<p>
-  <b>Category:</b>
-  <%= @image.category %>
-</p>
+<dl class="dl-horizontal">
+  <dt><strong><%= model_class.human_attribute_name(:name) %>:</strong></dt>
+  <dd><%= @image.name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:z_index) %>:</strong></dt>
+  <dd><%= @image.z_index %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:category) %>:</strong></dt>
+  <dd><%= @image.category %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:user_id) %>:</strong></dt>
+  <dd><%= @image.user_id %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:pathway) %>:</strong></dt>
+  <dd><%= @image.pathway %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:uploaded_file_name) %>:</strong></dt>
+  <dd><%= @image.uploaded_file_name %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:uploaded_content_type) %>:</strong></dt>
+  <dd><%= @image.uploaded_content_type %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:uploaded_file_size) %>:</strong></dt>
+  <dd><%= @image.uploaded_file_size %></dd>
+  <dt><strong><%= model_class.human_attribute_name(:uploaded_updated_at) %>:</strong></dt>
+  <dd><%= @image.uploaded_updated_at %></dd>
+</dl>
 
-<p>
-  <b>Path:</b>
-  <%= @image.pathway %>
-</p>
-
-<p>
-  <b>Image:</b>
-  <%=image_tag @image.uploaded.url %>
-</p>
-
-<%= link_to 'Edit', edit_image_path(@image) %> |
-<%= link_to 'Back', images_path %>
+<div class="form-actions">
+  <%= link_to t('.back', :default => t("helpers.links.back")),
+              images_path, :class => 'btn'  %>
+  <%= link_to t('.edit', :default => t("helpers.links.edit")),
+              edit_image_path(@image), :class => 'btn' %>
+  <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+              image_path(@image),
+              :method => 'delete',
+              :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+              :class => 'btn btn-danger' %>
+</div>
