--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -18,40 +18,11 @@
     </div>
   </div>
   <div class="control-group">
-    <%= f.label :user_id, :class => 'control-label' %>
+    <%= f.label :uploaded, :class => 'control-label', :label => "Image" %>
     <div class="controls">
-      <%= f.number_field :user_id, :class => 'number_field' %>
+      <%= f.file_field :uploaded, :class => 'file_field' %>
     </div>
   </div>
-  <div class="control-group">
-    <%= f.label :pathway, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :pathway, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :uploaded_file_name, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :uploaded_file_name, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :uploaded_content_type, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :uploaded_content_type, :class => 'text_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :uploaded_file_size, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.number_field :uploaded_file_size, :class => 'number_field' %>
-    </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :uploaded_updated_at, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.datetime_select :uploaded_updated_at, :class => 'datetime_select' %>
-    </div>
   </div>
 
   <div class="form-actions">
