--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,11 @@
       <a class="brand" href="#">History of Video Games Character Creator</a>
       <div class="nav-collapse">
         <ul class="nav">
-          <li><%= link_to "Price List" %></li>
-          <li><%= link_to "Contact Us" %></li>
-          <li><%= link_to "Cart" %></li>
+
+          <li><%= link_to "Login", new_user_path %></li>
+          <li><%= link_to "Assets", images_path %></li>
+          <li><%= link_to "How-To" %></li>
+
         </ul>
       </div>
     </div>
