--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
   <title>CharacterCreator</title>
   <!--[if lt IE 9]>
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
   <![endif]-->
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="navbar navbar-fixed-top">
+
+  <div class = "nav">
+    <% if user_signed_in? %>
+        <li> Logged in as <strong><%= current_user.email %></strong>.</li>
+    <%end%>
+  </div>
+
   <div class="navbar-inner">
     <div class="container">
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -19,25 +27,32 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">History of Video Games Character Creator</a>
+      <a class="brand" href="#">History of Video Games</a>
+
       <div class="nav-collapse">
+
         <ul class="nav">
 
-          <li><%= link_to "Login", new_user_path %></li>
-          <li><%= link_to "Assets", images_path %></li>
-          <li><%= link_to "How-To" %></li>
+          <% if user_signed_in? %>
+              <li> <%= link_to 'Edit profile', edit_user_registration_path %></li>
+              <li> <%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+              <li><%= link_to "Sign up", new_user_registration_path %></li>
+              <li><%= link_to "Login", new_user_session_path %></li>
+          <% end %>
+          <li><%= link_to "Assets", images_path %> </li>
 
         </ul>
       </div>
     </div>
   </div>
-</div>
-      <div class="container">
-        <div class="row">
-          <div class="span12">
-            <%= yield %></div>
-        </div>
-      </div>
+  <div class="container">
+    <div class="row">
+      <div class="span12">
+        <%= yield %></div>
 
+    </div>
+  </div>
+</div>
 </body>
 </html>
