Added onmiauth for facebook authentication
facebook authentication needs to be initialized after APP_ID and
APP_SECRET are obtained. Created and authentication model and will
revist when app has more complete functionality.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,45 +11,32 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-<div class="navbar navbar-fixed-top">
 
-  <div class = "nav">
+<div id="container">
+  <div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+      <ul class="nav nav-pills pull-right">
     <% if user_signed_in? %>
-        <li> Logged in as <strong><%= current_user.email %></strong>.</li>
-    <%end%>
+        Logged in as <strong><%= current_user.email %></strong>.
+        <%= link_to 'Edit profile', edit_user_registration_path %> |
+        <%= link_to "Logout", destroy_user_session_path, method: :delete %>
+    <% else %>
+        <%= link_to "Sign up", new_user_registration_path %> |
+        <%= link_to "Login", new_user_session_path %>
+    <% end %>
+          </ul>
+
   </div>
+</div>
+</div>
 
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="#">History of Video Games</a>
-
-      <div class="nav-collapse">
-
-        <ul class="nav">
-
-          <% if user_signed_in? %>
-              <li> <%= link_to 'Edit profile', edit_user_registration_path %></li>
-              <li> <%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
-          <% else %>
-              <li><%= link_to "Sign up", new_user_registration_path %></li>
-              <li><%= link_to "Login", new_user_session_path %></li>
-          <% end %>
-          <li><%= link_to "Assets", images_path %> </li>
-
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="container">
+<div class="container">
     <div class="row">
       <div class="span12">
-        <%= yield %></div>
+        <%= yield %>
+        </div>
 
     </div>
   </div>
