--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,3 +70,13 @@
     text-align: center;
     margin-bottom: 10px;
 }
+ul
+{
+    list-style-type:none;
+    margin:20;
+    padding:0;
+}
+li
+{
+    display:inline;
+}
