--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,16 @@
 <div id="container">
   <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
-
+      <ul class="nav nav-pills pull-left inline">
+      <% if user_signed_in? %>
+          <li > <%= link_to "Logged in as #{current_user.email}", '#'%> </li>
+            <% end %>
+        </ul>
       <ul class="nav nav-pills pull-right inline">
     <% if user_signed_in? %>
             <li><%= link_to 'Assets', images_path %></li>
-            <li><%= link_to 'My Characters'%></li>
-       <li> <%= link_to "Logged in as #{current_user.email}", user_path(current_user)%> </li>
+            <li><%= link_to 'My Characters', dolls_path %></li>
+
         <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
     <% else %>
