--- a/app/views/dolls/_form.html.erb
+++ b/app/views/dolls/_form.html.erb
@@ -1,8 +1,20 @@
-<%= semantic_form_for @doll do |f| %>
-  <%= f.inputs do %>
-  <% end %>
+<%= form_for @doll, :html => { :class => 'form-horizontal' } do |f| %>
+    <div class="control-group">
+      <%= f.label :name, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :name, :class => 'text_field' %>
+      </div>
+    </div>
+    <div class="control-group">
+      <%= f.label :dollrole, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :dollrole, :class => 'text_field' %>
+      </div>
+    </div>
 
-  <%= f.actions do %>
-    <%= f.action :submit, :as => :input %>
-  <% end %>
+    <div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                  dolls_path, :class => 'btn' %>
+    </div>
 <% end %>
