--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -9,12 +9,9 @@
       <th><%= model_class.human_attribute_name(:name) %></th>
       <th><%= model_class.human_attribute_name(:z_index) %></th>
       <th><%= model_class.human_attribute_name(:category) %></th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
-      <th><%= model_class.human_attribute_name(:pathway) %></th>
       <th><%= model_class.human_attribute_name(:uploaded) %></th>
       <th><%= model_class.human_attribute_name(:uploaded_file_name) %></th>
       <th><%= model_class.human_attribute_name(:uploaded_content_type) %></th>
-      <th><%= model_class.human_attribute_name(:uploaded_file_size) %></th>
       <th><%= model_class.human_attribute_name(:uploaded_updated_at) %></th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
@@ -27,12 +24,9 @@
         <td><%= image.name %></td>
         <td><%= image.z_index %></td>
         <td><%= image.category %></td>
-        <td><%= image.user_id %></td>
-        <td><%= image.pathway %></td>
-        <td><%= image_tag image.uploaded %></td>
+        <td><%= image_tag (image.uploaded.url(:small)), :alt => :name %></td>
         <td><%= image.uploaded_file_name %></td>
         <td><%= image.uploaded_content_type %></td>
-        <td><%= image.uploaded_file_size %></td>
         <td><%= image.uploaded_updated_at %></td>
         <td><%=l image.created_at %></td>
         <td>
@@ -50,5 +44,4 @@
 </table>
 
 <%= link_to t('.new', :default => t("helpers.links.new")),
-            new_image_path,
-            :class => 'btn btn-primary' %>
+            new_image_path, :class => 'btn' %>
